--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,9 @@
 [unstable]
 build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
+
+[build]
+target = "target_configs/arm-raspirus_os.json"
 
 # [target.arm-raspirus_os]
 # linker = "arm-none-eabi-gcc"
@@ -7,5 +11,6 @@ build-std = ["core", "compiler_builtins"]
 # [target.armv7r-unknown-none]
 # linker = "arm-none-eabi-gcc"
 
-[target.arm-none-eabi]
-linker = "arm-none-eabi-gcc"
+# [target.arm-none-eabi]
+# linker = "arm-none-eabi-gcc"
+
