--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,10 @@
+[alias]
+rel = "build --release"
+
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
 target = "target_configs/arm-raspirus_os.json"
+rustflags = ["-Ctarget-cpu=cortex-a72"]
