--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,12 @@
 [alias]
 rel = "build --release"
+ocr = "objcopy --verbose --release -- --strip-all -O binary kernel8.img"
+ocd = "objcopy -- --strip-all -O binary kernel8.img"
 
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "target_configs/arm-raspirus_os.json"
-rustflags = ["-Ctarget-cpu=cortex-a72"]
+target = "aarch64-unknown-none-softfloat"
+rustflags = ["-Clink-arg=-Tsrc/bsp/raspberrypi/link.ld", "-Ctarget-cpu=cortex-a72"]
