--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [features]
-# default = ["bsp_rpi3"]
+[features]
+default = []
+bsp_rpi3 = []
+bsp_rpi4 = []
 
 [dependencies]
-
 
 [profile.dev]
 panic = "abort"
